--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ __pycache__/quaternion_functions.cpython-310.pyc
 __pycache__/__init__.cpython-310.pyc
 __pycache__/generic_functions.cpython-310.pyc
 __pycache__/quaternion_functions.cpython-310.pyc
+__pycache__/generic_functions.cpython-310.pyc
+*.pyc
